--- a/Miyu/Feature/Homepage/HomepageCell/HomepageTableViewCell.xib
+++ b/Miyu/Feature/Homepage/HomepageCell/HomepageTableViewCell.xib
@@ -13,54 +13,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="HomepageTableViewCell" customModule="Miyu" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="747" height="903"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="1129" id="KGk-i7-Jjw" customClass="HomepageTableViewCell" customModule="Miyu" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="812" height="1129"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="747" height="902.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="812" height="1128.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Picture description and other good stuff caption stuff and stuff here" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUD-j2-8Nf">
-                        <rect key="frame" x="30" y="130" width="657" height="20.5"/>
+                        <rect key="frame" x="30" y="100.5" width="722" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dog" translatesAutoresizingMaskIntoConstraints="NO" id="JSI-uK-gow">
-                        <rect key="frame" x="0.0" y="170.5" width="672" height="672"/>
+                        <rect key="frame" x="0.0" y="141" width="812" height="812"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="JSI-uK-gow" secondAttribute="height" multiplier="1:1" id="YAO-JN-aOi"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* 1000 people rated this" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZH-B9-b1W">
-                        <rect key="frame" x="30" y="847.5" width="184" height="20.5"/>
+                        <rect key="frame" x="30" y="958" width="184" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L1p-DO-jn8" userLabel="Comment Header">
-                        <rect key="frame" x="30" y="878" width="662" height="20.5"/>
+                        <rect key="frame" x="30" y="988.5" width="727" height="19.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Comments(25)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JcK-cd-6Bg">
-                                <rect key="frame" x="0.0" y="0.0" width="513.5" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="578.5" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Susan Boller: &quot;YAY&quot;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u25-yq-zaZ">
-                                <rect key="frame" x="513.5" y="0.0" width="148.5" height="20.5"/>
+                                <rect key="frame" x="578.5" y="0.0" width="148.5" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rC0-b4-6Qh" customClass="CosmosView" customModule="Cosmos">
-                        <rect key="frame" x="0.0" y="898.5" width="725" height="60"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rC0-b4-6Qh" customClass="CosmosView" customModule="Cosmos">
+                        <rect key="frame" x="246" y="1028.5" width="320" height="60"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
-                                <color key="value" red="0.80527444950000004" green="0.19288981664553839" blue="0.28145817443251975" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="value" red="0.46043564219999999" green="0.31190952420000001" blue="0.80527444950000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="totalStars">
                                 <integer key="value" value="5"/>
@@ -83,14 +83,14 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="rcd-P5-2X9">
-                        <rect key="frame" x="30" y="20" width="100" height="100"/>
+                        <rect key="frame" x="30" y="20" width="60" height="60.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="100" id="PYU-vC-7JM"/>
-                            <constraint firstAttribute="width" constant="100" id="eyM-wU-zIh"/>
+                            <constraint firstAttribute="width" secondItem="rcd-P5-2X9" secondAttribute="height" multiplier="1:1" id="JQr-u4-suk"/>
+                            <constraint firstAttribute="height" constant="60" id="PYU-vC-7JM"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="1Hx-jD-0Ob" userLabel="Header">
-                        <rect key="frame" x="130" y="16" width="102" height="75.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="1Hx-jD-0Ob" userLabel="Header">
+                        <rect key="frame" x="100" y="10" width="102" height="75.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rR8-HI-NhL">
                                 <rect key="frame" x="0.0" y="0.0" width="102" height="48"/>
@@ -99,38 +99,39 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2w-gT-dze">
-                                <rect key="frame" x="38" y="48" width="64" height="27.5"/>
+                                <rect key="frame" x="0.0" y="48" width="102" height="27.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="u2w-gT-dze" firstAttribute="leading" secondItem="1Hx-jD-0Ob" secondAttribute="leading" id="2mj-I3-47R"/>
+                            <constraint firstItem="rR8-HI-NhL" firstAttribute="leading" secondItem="1Hx-jD-0Ob" secondAttribute="leading" id="PUe-9p-Cfs"/>
                             <constraint firstItem="u2w-gT-dze" firstAttribute="top" secondItem="rR8-HI-NhL" secondAttribute="bottom" id="VR7-Zu-vjz"/>
                         </constraints>
                     </stackView>
                 </subviews>
                 <color key="backgroundColor" red="1" green="0.64352128936375197" blue="0.57676956476521068" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
-                    <constraint firstItem="1Hx-jD-0Ob" firstAttribute="leading" secondItem="rcd-P5-2X9" secondAttribute="trailing" id="32W-ng-qct"/>
+                    <constraint firstItem="rC0-b4-6Qh" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="2E9-be-cpj"/>
+                    <constraint firstItem="1Hx-jD-0Ob" firstAttribute="leading" secondItem="rcd-P5-2X9" secondAttribute="trailing" constant="10" id="32W-ng-qct"/>
                     <constraint firstItem="L1p-DO-jn8" firstAttribute="leading" secondItem="IZH-B9-b1W" secondAttribute="leading" id="5aC-pS-Jc6"/>
                     <constraint firstItem="IZH-B9-b1W" firstAttribute="top" secondItem="JSI-uK-gow" secondAttribute="bottom" constant="5" id="7D2-xE-OTI"/>
                     <constraint firstItem="IZH-B9-b1W" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="7Tj-4l-R56"/>
-                    <constraint firstItem="DUD-j2-8Nf" firstAttribute="top" secondItem="rcd-P5-2X9" secondAttribute="bottom" constant="10" id="CYD-it-HOP"/>
+                    <constraint firstItem="DUD-j2-8Nf" firstAttribute="top" secondItem="rcd-P5-2X9" secondAttribute="bottom" constant="20" id="CYD-it-HOP"/>
+                    <constraint firstItem="1Hx-jD-0Ob" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="CeJ-Vd-Uw3"/>
                     <constraint firstItem="rcd-P5-2X9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="DaD-FD-f3x"/>
-                    <constraint firstAttribute="trailing" secondItem="rC0-b4-6Qh" secondAttribute="trailing" constant="22" id="GGG-EN-ZNX"/>
                     <constraint firstItem="L1p-DO-jn8" firstAttribute="top" secondItem="IZH-B9-b1W" secondAttribute="bottom" constant="10" id="GuN-fh-mPk"/>
                     <constraint firstItem="JSI-uK-gow" firstAttribute="top" secondItem="DUD-j2-8Nf" secondAttribute="bottom" constant="20" id="JXE-2o-5G2"/>
-                    <constraint firstItem="1Hx-jD-0Ob" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="PDL-o2-NFe"/>
                     <constraint firstItem="DUD-j2-8Nf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="Wo0-bS-Pc9"/>
-                    <constraint firstAttribute="bottom" secondItem="rC0-b4-6Qh" secondAttribute="bottom" constant="40" id="a0g-9c-daQ"/>
                     <constraint firstAttribute="trailing" secondItem="JSI-uK-gow" secondAttribute="trailing" id="aYj-rQ-qup"/>
                     <constraint firstItem="rcd-P5-2X9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="br8-6s-gcx"/>
                     <constraint firstItem="JSI-uK-gow" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cbE-mh-eB6"/>
-                    <constraint firstItem="rC0-b4-6Qh" firstAttribute="top" secondItem="L1p-DO-jn8" secondAttribute="bottom" id="d3K-KL-u3O"/>
+                    <constraint firstItem="rC0-b4-6Qh" firstAttribute="top" secondItem="L1p-DO-jn8" secondAttribute="bottom" constant="20" id="d3K-KL-u3O"/>
                     <constraint firstAttribute="trailing" secondItem="DUD-j2-8Nf" secondAttribute="trailing" constant="60" id="fF0-Nq-4sO"/>
+                    <constraint firstAttribute="bottom" secondItem="rC0-b4-6Qh" secondAttribute="bottom" constant="40" id="lJl-te-zJn"/>
                     <constraint firstAttribute="trailing" secondItem="L1p-DO-jn8" secondAttribute="trailing" constant="55" id="mTt-HP-l01"/>
-                    <constraint firstItem="rC0-b4-6Qh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="qnH-kf-2jm"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -145,7 +146,7 @@
                 <outlet property="ratingView" destination="rC0-b4-6Qh" id="n9e-KF-mjE"/>
                 <outlet property="recentCommentLabel" destination="u25-yq-zaZ" id="j6s-HU-7nn"/>
             </connections>
-            <point key="canvasLocation" x="94.5" y="225.5"/>
+            <point key="canvasLocation" x="127" y="338.5"/>
         </tableViewCell>
     </objects>
     <resources>
