--- a/Miyu/Feature/Upload/UploadViewController.storyboard
+++ b/Miyu/Feature/Upload/UploadViewController.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,58 +31,58 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xEu-R7-XB0">
-                                <rect key="frame" x="29" y="186" width="317" height="285"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="reZ-Tm-6yR">
+                                <rect key="frame" x="5" y="166" width="365" height="365"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="reZ-Tm-6yR" secondAttribute="height" multiplier="1:1" id="Abq-F1-jiX"/>
+                                </constraints>
+                                <state key="normal" image="upload"/>
+                                <connections>
+                                    <action selector="uploadImageTapped:" destination="Bzy-5R-Lfb" eventType="touchUpInside" id="iyC-ZD-eOL"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n1D-Dz-Ak8">
+                                <rect key="frame" x="29" y="531" width="317" height="97"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="reZ-Tm-6yR">
-                                        <rect key="frame" x="75" y="92" width="154" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" image="upload"/>
-                                        <connections>
-                                            <action selector="uploadImageTapped:" destination="Bzy-5R-Lfb" eventType="touchUpInside" id="iyC-ZD-eOL"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" red="0.94255631345177671" green="0.94255631345177671" blue="0.94255631345177671" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n1D-Dz-Ak8">
-                                <rect key="frame" x="29" y="479" width="317" height="149"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VM0-av-LfR">
-                                        <rect key="frame" x="8" y="8" width="37" height="36"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VM0-av-LfR">
+                                        <rect key="frame" x="8" y="8" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="VM0-av-LfR" secondAttribute="height" multiplier="1:1" id="Sn8-PZ-yVB"/>
+                                            <constraint firstAttribute="width" constant="40" id="sls-VQ-TIZ"/>
+                                        </constraints>
                                         <state key="normal" image="edit"/>
                                         <connections>
                                             <action selector="editCaptionTapped:" destination="Bzy-5R-Lfb" eventType="touchUpInside" id="bUI-uU-N1O"/>
                                         </connections>
                                     </button>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Photo caption!" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ETu-mX-rXd">
-                                        <rect key="frame" x="53" y="10" width="240" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Photo caption!" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ETu-mX-rXd">
+                                        <rect key="frame" x="48" y="10" width="269" height="97"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.89944876269035534" green="0.59584858994644896" blue="0.65581210734981177" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="VM0-av-LfR" firstAttribute="leading" secondItem="n1D-Dz-Ak8" secondAttribute="leading" constant="8" id="EcN-5A-1FK"/>
+                                    <constraint firstItem="ETu-mX-rXd" firstAttribute="leading" secondItem="VM0-av-LfR" secondAttribute="trailing" id="bxC-FE-m32"/>
+                                    <constraint firstAttribute="trailing" secondItem="ETu-mX-rXd" secondAttribute="trailing" id="crd-F3-ylC"/>
+                                    <constraint firstItem="ETu-mX-rXd" firstAttribute="top" secondItem="n1D-Dz-Ak8" secondAttribute="top" constant="10" id="iuq-t5-6Is"/>
+                                    <constraint firstItem="VM0-av-LfR" firstAttribute="top" secondItem="n1D-Dz-Ak8" secondAttribute="top" constant="8" id="tsf-4a-qbR"/>
+                                    <constraint firstItem="ETu-mX-rXd" firstAttribute="height" secondItem="n1D-Dz-Ak8" secondAttribute="height" id="weQ-bX-WAn"/>
+                                </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="F8n-fY-Siz">
-                                <rect key="frame" x="29" y="69" width="124" height="91"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="F8n-fY-Siz">
+                                <rect key="frame" x="29" y="69" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="F8n-fY-Siz" secondAttribute="height" multiplier="1:1" id="Hts-TR-7qd"/>
+                                    <constraint firstAttribute="width" secondItem="F8n-fY-Siz" secondAttribute="height" multiplier="1:1" id="KEg-VB-O1G"/>
+                                    <constraint firstAttribute="width" constant="80" id="kEu-cR-5Zj"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lacie Pound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGE-q7-9zu">
-                                <rect key="frame" x="166" y="85" width="132" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lacie Pound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGE-q7-9zu">
+                                <rect key="frame" x="119" y="69" width="112" height="25.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="4.1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ih5-p2-5ud">
-                                <rect key="frame" x="166" y="118" width="58" height="42"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -92,10 +93,29 @@
                                     <action selector="uploadContent:" destination="Bzy-5R-Lfb" eventType="touchUpInside" id="KFE-aM-Fko"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ih5-p2-5ud">
+                                <rect key="frame" x="119" y="107" width="57" height="54"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.7960767989130475" blue="0.83026271661129025" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="IxR-J2-X4S" firstAttribute="trailing" secondItem="n1D-Dz-Ak8" secondAttribute="trailing" constant="29" id="30X-TC-zNg"/>
+                            <constraint firstItem="F8n-fY-Siz" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="29" id="38b-c2-trW"/>
+                            <constraint firstItem="F8n-fY-Siz" firstAttribute="top" secondItem="IxR-J2-X4S" secondAttribute="top" constant="49" id="C4g-2V-Yd3"/>
+                            <constraint firstItem="fGE-q7-9zu" firstAttribute="top" secondItem="F8n-fY-Siz" secondAttribute="top" id="LTj-mp-uTq"/>
+                            <constraint firstItem="reZ-Tm-6yR" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="5" id="PLW-Dz-dR8"/>
                             <constraint firstItem="UYa-xu-FBw" firstAttribute="centerX" secondItem="IxR-J2-X4S" secondAttribute="centerX" id="gyV-wK-7gb"/>
+                            <constraint firstItem="reZ-Tm-6yR" firstAttribute="top" secondItem="Ih5-p2-5ud" secondAttribute="bottom" constant="5" id="hGm-cM-Tm2"/>
+                            <constraint firstItem="IxR-J2-X4S" firstAttribute="trailing" secondItem="reZ-Tm-6yR" secondAttribute="trailing" constant="5" id="heB-s6-AfH"/>
+                            <constraint firstItem="n1D-Dz-Ak8" firstAttribute="top" secondItem="reZ-Tm-6yR" secondAttribute="bottom" id="kzR-hy-fa2"/>
+                            <constraint firstItem="UYa-xu-FBw" firstAttribute="top" secondItem="n1D-Dz-Ak8" secondAttribute="bottom" constant="8" id="qef-pq-0KT"/>
+                            <constraint firstItem="fGE-q7-9zu" firstAttribute="leading" secondItem="F8n-fY-Siz" secondAttribute="trailing" constant="10" id="uCP-mt-9EF"/>
+                            <constraint firstItem="Ih5-p2-5ud" firstAttribute="top" secondItem="fGE-q7-9zu" secondAttribute="bottom" constant="12.5" id="uNE-uv-pM5"/>
+                            <constraint firstItem="Ih5-p2-5ud" firstAttribute="leading" secondItem="F8n-fY-Siz" secondAttribute="trailing" constant="10" id="uZX-9y-FBg"/>
+                            <constraint firstItem="n1D-Dz-Ak8" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="29" id="wxk-O2-Sjx"/>
                             <constraint firstItem="IxR-J2-X4S" firstAttribute="bottom" secondItem="UYa-xu-FBw" secondAttribute="bottom" constant="1" id="yrd-Zc-JXj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IxR-J2-X4S"/>
@@ -104,9 +124,11 @@
                     <connections>
                         <outlet property="captionTextView" destination="ETu-mX-rXd" id="6nV-c7-ly8"/>
                         <outlet property="centerImage" destination="reZ-Tm-6yR" id="SIL-dm-cSK"/>
+                        <outlet property="editCaptionContainer" destination="n1D-Dz-Ak8" id="Rok-Y7-jSj"/>
                         <outlet property="name" destination="fGE-q7-9zu" id="RKv-1W-rSP"/>
                         <outlet property="profileImage" destination="F8n-fY-Siz" id="pv5-4u-fSE"/>
                         <outlet property="rating" destination="Ih5-p2-5ud" id="dzw-gv-X1a"/>
+                        <outlet property="uploadButton" destination="reZ-Tm-6yR" id="b8S-ZV-mJh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VC9-MH-sxZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
