--- a/Miyu/Feature/Upload/UploadViewController.storyboard
+++ b/Miyu/Feature/Upload/UploadViewController.storyboard
@@ -32,7 +32,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="reZ-Tm-6yR">
-                                <rect key="frame" x="5" y="166" width="365" height="365"/>
+                                <rect key="frame" x="20" y="171" width="335" height="335"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="reZ-Tm-6yR" secondAttribute="height" multiplier="1:1" id="Abq-F1-jiX"/>
                                 </constraints>
@@ -42,7 +42,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n1D-Dz-Ak8">
-                                <rect key="frame" x="29" y="531" width="317" height="97"/>
+                                <rect key="frame" x="29" y="516" width="317" height="112"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VM0-av-LfR">
                                         <rect key="frame" x="8" y="8" width="40" height="40"/>
@@ -56,7 +56,7 @@
                                         </connections>
                                     </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Photo caption!" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ETu-mX-rXd">
-                                        <rect key="frame" x="48" y="10" width="269" height="97"/>
+                                        <rect key="frame" x="48" y="10" width="269" height="112"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -106,11 +106,11 @@
                             <constraint firstItem="F8n-fY-Siz" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="29" id="38b-c2-trW"/>
                             <constraint firstItem="F8n-fY-Siz" firstAttribute="top" secondItem="IxR-J2-X4S" secondAttribute="top" constant="49" id="C4g-2V-Yd3"/>
                             <constraint firstItem="fGE-q7-9zu" firstAttribute="top" secondItem="F8n-fY-Siz" secondAttribute="top" id="LTj-mp-uTq"/>
-                            <constraint firstItem="reZ-Tm-6yR" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="5" id="PLW-Dz-dR8"/>
+                            <constraint firstItem="reZ-Tm-6yR" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="20" id="PLW-Dz-dR8"/>
                             <constraint firstItem="UYa-xu-FBw" firstAttribute="centerX" secondItem="IxR-J2-X4S" secondAttribute="centerX" id="gyV-wK-7gb"/>
-                            <constraint firstItem="reZ-Tm-6yR" firstAttribute="top" secondItem="Ih5-p2-5ud" secondAttribute="bottom" constant="5" id="hGm-cM-Tm2"/>
-                            <constraint firstItem="IxR-J2-X4S" firstAttribute="trailing" secondItem="reZ-Tm-6yR" secondAttribute="trailing" constant="5" id="heB-s6-AfH"/>
-                            <constraint firstItem="n1D-Dz-Ak8" firstAttribute="top" secondItem="reZ-Tm-6yR" secondAttribute="bottom" id="kzR-hy-fa2"/>
+                            <constraint firstItem="reZ-Tm-6yR" firstAttribute="top" secondItem="Ih5-p2-5ud" secondAttribute="bottom" constant="10" id="hGm-cM-Tm2"/>
+                            <constraint firstItem="IxR-J2-X4S" firstAttribute="trailing" secondItem="reZ-Tm-6yR" secondAttribute="trailing" constant="20" id="heB-s6-AfH"/>
+                            <constraint firstItem="n1D-Dz-Ak8" firstAttribute="top" secondItem="reZ-Tm-6yR" secondAttribute="bottom" constant="10" id="kzR-hy-fa2"/>
                             <constraint firstItem="UYa-xu-FBw" firstAttribute="top" secondItem="n1D-Dz-Ak8" secondAttribute="bottom" constant="8" id="qef-pq-0KT"/>
                             <constraint firstItem="fGE-q7-9zu" firstAttribute="leading" secondItem="F8n-fY-Siz" secondAttribute="trailing" constant="10" id="uCP-mt-9EF"/>
                             <constraint firstItem="Ih5-p2-5ud" firstAttribute="top" secondItem="fGE-q7-9zu" secondAttribute="bottom" constant="12.5" id="uNE-uv-pM5"/>
